@@ -63,7 +63,7 @@
         <td><f:form.select id="skin" name="output[skin]" options="{data.settings}" value="{value.output.skin}" /></td>
         <td class="cbx"><f:form.checkbox id="factory.skin" name="factory" checked="{data.factory.skin}" value="1" /><label for="factory.skin"><f:translate key="factory.settings" /></label></td>
       </tr>
-      
+
       <tr><td><f:translate key="label.destination" /></td><td colspan="2"><f:translate key="logging.noteditable"/></td></tr>
       <tr><td><f:translate key="label.folder" /></td><td colspan="2"><f:translate key="logging.noteditable"/></td></tr>
       <tr><td><f:translate key="label.maxfiles" /></td><td colspan="2"><f:translate key="logging.noteditable"/></td></tr>
@@ -113,11 +113,7 @@
         <td><f:form.select id="analysePrivateMethods" name="methods[analysePrivateMethods]" options="{data.settings}" value="{value.methods.analysePrivateMethods}" /></td>
         <td class="cbx"><f:form.checkbox id="factory.analysePrivateMethods" name="factory" checked="{data.factory.analysePrivateMethods}" value="1" /><label for="factory.analysePrivateMethods"><f:translate key="factory.settings" /></label></td>
       </tr>
-      <tr>
-        <td><label for="debugMethods"><f:translate key="label.debugMethods" /></label></td>
-        <td><f:form.select id="debugMethods" name="methods[debugMethods]" options="{data.settings}" value="{value.methods.debugMethods}" /></td>
-        <td class="cbx"><f:form.checkbox id="factory.debugMethods" name="factory" checked="{data.factory.debugMethods}" value="1" /><label for="factory.debugMethods"><f:translate key="factory.settings" /></label></td>
-      </tr>
+      <tr><td><f:translate key="label.debugMethods" /></td><td colspan="2"><f:translate key="logging.noteditable"/></td></tr>
       <tr><td colspan="3">&nbsp;</td></tr>
 
       <tr>
